logo font needs to be change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
         <div class="logo">
             <a href="#">
-                <span>C</span>rystal<span>L</span>akes<span>Studios</span>
+                <span>C</span>rystal<span>L</span>akes<span>S</span>tudios
             </a>
         </div>
         <div class="nav-list">
