navbar add and styled

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Agency</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Bellota+Text:wght@300;400;700&family=Monoton&family=Nunito:wght@200;300;400;600;700;800;900&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Bellota+Text:wght@300;400;700&family=Monoton&family=Nunito:wght@200;300;400;600;700;800;900&family=Oswald:wght@200;300;400;500;600;700&family=Squada+One&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -19,7 +17,7 @@
         <div class="logo">
             <a href="#">
                 <span>C</span>rystal<span>L</span>akes<span>S</span>tudios
-            </a>
+            </a>4
         </div>
         <div class="nav-list">
             <a href="#" class="nav-link">Home</a>
