--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
         <!-- End of Section 1 -->
     </div>
 
-
+    <!-- Section 2 -->
+    <section class="section-2">
+        <h1 class="section-heading">About Us</h1>
+        <div class="section-heading-line"></div>
+        <div class="audio-wrapper"></div>
+            <audio src="" class="audio"></audio>
+    </section>
+    <!-- End of Section 2 -->
     <script src="script.js"></script>
 </body>
 </html>
